Money runs out while you walk New path at start modified csv

--- a/v2/index.html
+++ b/v2/index.html
@@ -9,6 +9,7 @@
 <body>
 
   <h1>Arnon's Malaria Hunt</h1>
+  <p>Look for puddles with the arrow keys</p>
   <div id="game"></div>
   <script src="index.js"></script>
 
